# server

./: .babelrc  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc  .gitattributes  .gitignore  .lintstagedrc  .lintstagedrc.js  .lintstagedrc.mjs  .prettierignore  .prettierrc  .prettierrc.json  .replit  .swcrc  CITATION.cff  CMakeLists.txt  CONTRIBUTING.MD  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  RAILWAY.md  README.md  REPORT.md  build.json  build.json.default  build.tab-linux-desktop.json  client.js  crowdin.yml  database.db  default.nix  docker-compose-dev.yml  docker-compose.cfg.yml  docker-compose.postgres.yml  docker-compose.yml  env-vars.md  eslint.config.mjs  flake.nix  (+19 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.docker/: env
.githooks/: pre-commit
.github/: CODEOWNERS  relase_body_template.md  release_body_template.md
.husky/: pre-commit
api/: .env.example  .gitignore  .swcrc  Dockerfile  LICENSE  README.md  babel.config.js  crowdin.yml  jest.config.ts  jsconfig.json  package-lock.json  package.json  tsconfig-docker.json  tsconfig.json
assets/: cacheMisses  changelog.txt  checkLocale.js  developers.html  experiments.js  features.json  fosscord-login.css  fosscord.css  index.html  openapi.json  popout.html  schemas.json  user.css  webrtc.js
benchmarks/: thresholds.json
bundle/: .gitignore  .swcrc  database.db  package-lock.json  package.json  tsconfig-paths-bootstrap.js  tsconfig.json  tsconfig.tsbuildinfo  tsnode.tsconfig.json
cdn/: .gitignore  .swcrc  CONTRIBUTE.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
client/: index.html
client_test/: index.html
dashboard/: .swcrc  README.md  package-lock.json  (+1 more)
(+3597 files in other folders)
